--- a/wp-content/themes/simplex-electrician/package.json
+++ b/wp-content/themes/simplex-electrician/package.json
@@ -43,6 +43,7 @@
     "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
+    "gulp-sass-unicode": "^1.0.5",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "postcss": "^8.2.4"
